# architecture-sprint-5

./: config.yml  domain.yml  pyproject.toml
data/: nlu.yml  rules.yml
src/components/: Basic.js
